Delisted work fixes (#757)
* Delisted work fixes

* i18n nit

* Move API-specific enum

* Raise error when unbinding pending sources

* Move moderation related code
